k8s/02-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellopod
  namespace: hellopod
  labels:
    app: hellopod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hellopod
  template:
    metadata:
      labels:
        app: hellopod
    spec:
      containers:
      - image: ghcr.io/msound/hellopod
        imagePullPolicy: Always
        name: app
        ports:
        - containerPort: 8080
