k8s/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hellopod-svc
  namespace: hellopod
  labels:
    app: hellopod
spec:
  selector:
    app: hellopod
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
